[metadata]
name = djlotrek
description = Lotrek beloved Django utilities library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lotrekagency/djlotrek
license = MIT
author = Lotrèk
author_email = dimmitutto@lotrek.it
keywords = cms, django, api cms
classifiers =
        Environment :: Web Environment
        Framework :: Django
        Intended Audience :: Developers
        Programming Language :: Python
        Programming Language :: Python :: 3
[options]
packages = find:
include_package_data = True
python_requires = >= 3.0.*
install_requires =
        pycryptodome>=3.9.8
        requests>=2.18.4
        Django>=1.8
[bdist_wheel]
universal=true
[semantic_release]
version_variable = 
        setup.py:__version__
        djlotrek/__init__.py:__version__